--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html l="ja">
+<html lang="ja">
 	<head>
 		  <meta charset="UTF-8">
 		    <title>Gitの勉強</title>
-	</head>
-	<body>
-		  <h1>gh-pageブランチはGitHub Pagesに公開されます。</h1>
-	</body>
+		    /ead>
+		    <body>
+			      <1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+		        <p>この変更はmasterブランチで追加されました。</p>
+			</bod>
 </html>
