--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		  <meta charset="UTF-8">
 		    <title>Gitの勉強</title>
-		    /ead>
+		    </head>
 		    <body>
 			      <1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
 		        <p>この変更はmasterブランチで追加されました。</p>
-			</bod>
+			</body>
 </html>
